--- a/travis.yaml
+++ b/travis.yaml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - 0.12.2
+  - "node"
 script:
   - uglifyjs ./app/static/js/working/main.js -o ./app/static/js/main.min.js
   - uglifyjs ./app/static/js/working/modal.js -o ./app/static/js/modal.min.js
