--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,24 @@
-language: node_js
-node_js:
-  - "node"
-script:
-  - uglifyjs ./app/static/js/working/main.js -o ./app/static/js/main.min.js
-  - uglifyjs ./app/static/js/working/modal.js -o ./app/static/js/modal.min.js
-  - py freeze.py
-  - py -m awscli s3 cp ./app/build s3://albert-miller/ --recursive
-# addons:
-# before_install:
-# install:
-# before_script:
+matrix:
+  include:
+    - language: node_js
+      node_js:
+        - "stable"
+      install:
+        - npm install -g uglify-js
+      script:
+        - uglifyjs ./app/static/js/working/main.js -o ./app/static/js/main.min.js
+        - uglifyjs ./app/static/js/working/modal.js -o ./app/static/js/modal.min.js
+    
+    - language: python
+      python: 
+        - "stable"
+      # before_install:
+      #   - ./venv/Scripts/activate
+      install: 
+        - pip install -r requirements.txt
+      script:
+        - py freeze.py
+        - py -m awscli s3 cp ./app/build s3://albert-miller/ --recursive
+
+notifications:
+  email: false
