--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ matrix:
     - npm install -g uglify-js
     - npm install
     script:
-    - uglifyjs ./app/static/js/working/main.js -o ./app/static/js/main.min.js
-    - uglifyjs ./app/static/js/working/modal.js -o ./app/static/js/modal.min.js
+    - uglifyjs ./app/static/js/main.js -o ./app/static/js/main.min.js
 
   - language: python
     python:
@@ -20,7 +19,6 @@ matrix:
     install:
     - pip install -r requirements.txt
     script:
-    - python freeze.py
     deploy:
       provider: s3
       access_key_id: $AWS_KEY_ID
