--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 matrix:
   include:
-
   - language: node_js
     node_js:
     - stable
@@ -21,11 +20,10 @@ matrix:
       access_key_id: $AWS_KEY_ID
       secret_access_key: $SECRET_AWS_KEY_ID
       bucket: almiller.co
-      local_dir: ./app/build
+      local_dir: ./
       skip_cleanup: true
       region: us-east-1
     after_deploy:
     - awscli cloudfront create-invalidation --distribution-id $DISTRIBUTION_ID --paths "/*
-      
 notifications:
   email: false
