--- a/view/package.json
+++ b/view/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "view",
+  "name": "almiller.co",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,6 +12,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
+    "tachyons": "^4.12.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
